--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
 </div>
 
 <!-- SCRIPTS -->
-<script src="js/monsters.js"></script>
-<script src="js/rumors.js"></script>
-<script src="js/npcData.js"></script>
-<script src="js/lootAndShops.js"></script>
-<script src="js/main.js"></script>
+<script src="monsters.js"></script>
+<script src="rumors.js"></script>
+<script src="npcData.js"></script>
+<script src="lootAndShops.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
